# sara-project

./: Cargo.toml  memory.x
.cargo/: config.toml
docs/: .gitignore  progress_report_2.tex  progress_report_3.tex  progress_report_4.tex  ref.bib
src/: main.rs
src/adc/: mod.rs
src/gpio/: mod.rs
src/timer/: mod.rs
src/uart/: mod.rs
