[package]
authors = ["Kanisorn-S <karamahati@gmailcom>"]
name = "sara-project"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
ufmt = "0.2.0"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h743v", "rt", "fmc", "rm0433", "usb_hs"] }
usb-device = "0.3.2"
panic-halt = "1.0.0"
st7735-lcd = "0.10.0"
usbd-serial = "0.2.2"
heapless = "0.8.0"
libm = "0.2.15"
mcp4x = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-hal-compat = "0.13.0"
embedded-hal = "1.0.0"

[profile.dev]
opt-level = 's'
codegen-units = 1

[profile.release]
opt-level = 's'
codegen-units = 1
lto = 'fat'
debug = 2
